fix: stop scrollbar from pushing content on windows

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -15,6 +15,12 @@
 
   body {
     @apply bg-black text-white;
+    /* hide scrollbar */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  body::-webkit-scrollbar {
+    display: none;
   }
 }
 
